--- a/index.html
+++ b/index.html
@@ -107,6 +107,35 @@
               <div class="team-bottom">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-descr">Product Designer</p>
+                <ul class="social-links">
+  <li>
+    <a href="https://www.instagram.com/" target="_blank" class="link">
+        <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-instagram-2"></use>
+    </svg>
+    </a>
+  </li>
+   <li>
+    <a href="https://x.com/" target="_blank" class="link">
+        <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-twitter-1"></use>
+    </svg>
+    </a>
+  </li>
+   <a href="https://www.facebook.com/" target="_blank" class="link">
+        <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-facebook-1"></use>
+    </svg>
+    </a>
+  </li>
+  <li>
+    <a href="https://ua.linkedin.com/" target="_blank" class="link">
+         <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-linkedin-1"></use>
+    </svg>
+    </a>
+  </li>
+</ul>
               </div>
             </li>
             <li class="team-command">
@@ -119,6 +148,35 @@
               <div class="team-bottom">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-descr">Frontend Developer</p>
+                <ul class="social-links">
+  <li>
+    <a href="https://www.instagram.com/" target="_blank" class="link">
+        <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-instagram-2"></use>
+    </svg>
+    </a>
+  </li>
+   <li>
+    <a href="https://x.com/" target="_blank" class="link">
+        <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-twitter-1"></use>
+    </svg>
+    </a>
+  </li>
+   <a href="https://www.facebook.com/" target="_blank" class="link">
+        <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-facebook-1"></use>
+    </svg>
+    </a>
+  </li>
+  <li>
+    <a href="https://ua.linkedin.com/" target="_blank" class="link">
+         <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-linkedin-1"></use>
+    </svg>
+    </a>
+  </li>
+</ul>
               </div>
             </li>
             <li class="team-command">
@@ -131,6 +189,35 @@
               <div class="team-bottom">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-descr">Marketing</p>
+                <ul class="social-links">
+  <li>
+    <a href="https://www.instagram.com/" target="_blank" class="link">
+        <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-instagram-2"></use>
+    </svg>
+    </a>
+  </li>
+   <li>
+    <a href="https://x.com/" target="_blank" class="link">
+        <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-twitter-1"></use>
+    </svg>
+    </a>
+  </li>
+   <a href="https://www.facebook.com/" target="_blank" class="link">
+        <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-facebook-1"></use>
+    </svg>
+    </a>
+  </li>
+  <li>
+    <a href="https://ua.linkedin.com/" target="_blank" class="link">
+         <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-linkedin-1"></use>
+    </svg>
+    </a>
+  </li>
+</ul>
               </div>
             </li>
             <li class="team-command">
@@ -143,6 +230,35 @@
               <div class="team-bottom">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-descr">UI Designer</p>
+                <ul class="social-links">
+  <li>
+    <a href="https://www.instagram.com/" target="_blank" class="link">
+        <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-instagram-2"></use>
+    </svg>
+    </a>
+  </li>
+   <li>
+    <a href="https://x.com/" target="_blank" class="link">
+        <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-twitter-1"></use>
+    </svg>
+    </a>
+  </li>
+   <a href="https://www.facebook.com/" target="_blank" class="link">
+        <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-facebook-1"></use>
+    </svg>
+    </a>
+  </li>
+  <li>
+    <a href="https://ua.linkedin.com/" target="_blank" class="link">
+         <svg class="social-icon" width="16" height="16">
+      <use href="./images/icons.svg#icon-linkedin-1"></use>
+    </svg>
+    </a>
+  </li>
+</ul>
               </div>
             </li>
           </ul>
