--- a/index.html
+++ b/index.html
@@ -399,14 +399,50 @@
     <!-- Footer -->
 
     <footer class="section footer-page">
-      <div class="container">
-        <a class="logo footer-logo" href="./index.html"
+        <div class="container">
+           <div class="footer-row">
+            <div> 
+              <a class="logo footer-logo" href="./index.html"
           >Web<span class="accent">Studio</span></a
         >
         <p class="footer-descr">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div>
+        <p class="footer-social">Social media</p>
+          <ul class="social-links footer-links">
+  <li>
+    <a href="https://www.instagram.com/" target="_blank" class="link">
+        <svg class="social-icon footer-icon" width="24" height="24">
+      <use href="./images/icons.svg#icon-instagram-2"></use>
+    </svg>
+    </a>
+  </li>
+   <li>
+    <a href="https://x.com/" target="_blank" class="link">
+        <svg class="social-icon" width="24" height="24">
+      <use href="./images/icons.svg#icon-twitter-1"></use>
+    </svg>
+    </a>
+  </li>
+   <a href="https://www.facebook.com/" target="_blank" class="link">
+        <svg class="social-icon" width="24" height="24">
+      <use href="./images/icons.svg#icon-facebook-1"></use>
+    </svg>
+    </a>
+  </li>
+  <li>
+    <a href="https://ua.linkedin.com/" target="_blank" class="link">
+         <svg class="social-icon" width="24" height="24">
+      <use href="./images/icons.svg#icon-linkedin-1"></use>
+    </svg>
+    </a>
+  </li>
+</ul>
+      </div>
+      </div>
       </div>
     </footer>
   </body>
