--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
         </div>
         <div class="footer-content">
           <p class="footer-social">Social media</p>
-          <ul class="social-links">
+          <ul class="social-links footer-list">
             <li class="team-social footer-links">
               <a href="https://www.instagram.com/" target="_blank" class="link">
                 <svg class="social-icon footer-icon" width="24" height="24">
