--- a/index.html
+++ b/index.html
@@ -502,21 +502,21 @@
             </li>
             <li class="team-social footer-links">
               <a href="https://x.com/" target="_blank" class="link">
-                <svg class="social-icon" width="24" height="24">
+                <svg class="social-icon footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="team-social footer-links">
               <a href="https://www.facebook.com/" target="_blank" class="link">
-                <svg class="social-icon" width="24" height="24">
+                <svg class="social-icon footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="team-social footer-links">
               <a href="https://ua.linkedin.com/" target="_blank" class="link">
-                <svg class="social-icon" width="24" height="24">
+                <svg class="social-icon footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
