--- a/index.html
+++ b/index.html
@@ -523,6 +523,18 @@
             </li>
           </ul>
         </div>
+        <div class="footer-content form">
+          <p class="footer-social">Subscribe</p>
+          <form class="subscribe-form">
+            <input  type="email" class="subscribe-input" placeholder="E-mail" required />
+             <button type="submit" class="subscribe-btn">Subscribe
+              <a href="" target="_blank" class="icon-form">
+                <svg class="icon-form" width="24" height="24">
+                  <use href="./images/icons.svg#icon-form"></use>
+                </svg>
+             </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
