--- a/index.html
+++ b/index.html
@@ -586,10 +586,10 @@
       <!-- E-mail -->
 
       <div class="form-field">
-        <label class="form-label" for="user-email">E-mail</label>
+        <label class="form-label" for="user-email">Email</label>
         <div class="input-wrapper">
           <input
-            class="form-input"
+            class="form-input"F
             name="user-email"
             id="user-email"
             type="text"
@@ -616,10 +616,11 @@
 
       <div class="form-field checkbox-field">
         <input
-          class="checkbox-input"
+          class="checkbox-input visually-hidden" 
           type="checkbox"
           name="user-privacy"
           id="user-privacy"
+          value="true" 
           required
         />
         <label class="checkbox-label" for="user-privacy">
