--- a/index.html
+++ b/index.html
@@ -526,7 +526,8 @@
         <div class="footer-content form">
           <p class="footer-social">Subscribe</p>
           <form class="subscribe-form">
-            <input  type="email" class="subscribe-input" placeholder="E-mail" required />
+            <label class="footer-form-label" for="email">
+            <input type="email" class="subscribe-input" placeholder="E-mail" required /></label>
              <button type="submit" class="subscribe-btn">Subscribe
                 <svg class="icon-form" width="24" height="24">
                   <use href="./images/icons.svg#icon-form"></use>
