--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
 
           <!-- Textarea -->
 
-          <div class="form-field">
+          <div class="form-field textarea">
             <label class="form-label" for="user-comment">Comment</label>
             <textarea
               class="form-textarea"
